Clean up context handling. I should also introduce a RecursiveDescentTokenStream.